fixed plenty of bugs in mapping score and node visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
     background-image: url(../images/Background/scene.png);
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
 }
 
 #container {
